# render-farm

./: CMakeLists.txt  README.md  ideas.txt
include/: camera.h  common.h  conway.h  engine.h  factory.h  game.h  grid.h  mcubes.h  shader.h  simplex_noise.h  tables.h  world.h
res/shaders/: geometry.frag  island.frag  island.vert  light.frag  light.vert
src/: main.cpp
src/engine/: cubemap.cpp  engine.cpp  framebuffer.cpp  game.cpp  mesh.cpp  shader.cpp  texture.cpp
src/game/: camera.cpp  chunk.cpp  conway.cpp  day_cycle.cpp  grid.cpp  mcube.cpp  mcubes.cpp  simplex_noise.cpp  world.cpp
